Refactor payload handling and pipeline injection logic